--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kicking-clicker",
+  "name": "kick-the-market",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,12 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "phaser": "^3.90.0"
+    "@farcaster/frame-sdk": "^0.0.64",
+    "@farcaster/frame-wagmi-connector": "^0.0.53",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.90.2",
+    "phaser": "^3.90.0",
+    "viem": "^2.38.1",
+    "wagmi": "^2.18.0"
   }
 }
