--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "api": "node localserver/index.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "express": "^5.1.0",
+    "body-parser": "^2.2.0"
   },
   "dependencies": {
     "@farcaster/frame-sdk": "^0.0.64",
