--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.1.7",
+    "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "body-parser": "^2.2.0"
+    "vite": "^7.1.7"
   },
   "dependencies": {
     "@farcaster/frame-sdk": "^0.0.64",
     "@farcaster/frame-wagmi-connector": "^0.0.53",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.90.2",
+    "dotenv": "^17.2.3",
     "phaser": "^3.90.0",
     "viem": "^2.38.1",
     "wagmi": "^2.18.0"
